--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.28.1",
+    "sonner": "^1.5.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
